WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183974
Fix the !HAVE(APP_LINKS) build
https://bugs.webkit.org/show_bug.cgi?id=183974
Summary
Fix the !HAVE(APP_LINKS) build
Tim Horton
Reported
2018-03-23 22:37:15 PDT
Fix the !HAVE(APP_LINKS) build
Attachments
Patch
(2.09 KB, patch)
2018-03-23 22:37 PDT
,
Tim Horton
mitz: review+
thorton
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-03-23 22:37:45 PDT
Created
attachment 336461
[details]
Patch
mitz
Comment 2
2018-03-23 22:40:59 PDT
Comment on
attachment 336461
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336461&action=review
> Source/WebCore/PAL/pal/spi/cocoa/LaunchServicesSPI.h:35 > +#import <MobileCoreServices/MobileCoreServices.h>
Strange.
Tim Horton
Comment 3
2018-03-23 23:26:41 PDT
https://trac.webkit.org/changeset/229944/webkit
Radar WebKit Bug Importer
Comment 4
2018-03-23 23:27:19 PDT
<
rdar://problem/38820521
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug