Fix the !HAVE(APP_LINKS) build https://bugs.webkit.org/show_bug.cgi?id=183974

Reviewed by Dan Bernstein.

* pal/spi/cocoa/LaunchServicesSPI.h:
This header is not very !HAVE(APP_LINKS) friendly.


Canonical link: https://commits.webkit.org/199576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229944 268f45cc-cd09-0410-ab3c-d52691b4dbfc